adding database methods CRUD

--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -176,3 +176,24 @@ footer p a{
 	color: #648fff;
 	font-weight: bold;
 }
+
+.mainContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+    background-color: #F3F4F6;
+    padding: 80px;
+    border-radius: 10px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#username {
+	height: 30px;
+	width: 200px;
+}
+
+#password {
+	height: 30px;
+	width: 200px;
+}
